# cross-ramp-integration-sample

./: .gitignore  GUIDE.md  GUIDE_KR.md  README.md  README_KR.md
cpp/: CMakeLists.txt  README.md  test_hmac.cpp
cpp/include/: config.hpp  database.hpp  handlers.hpp  hmac.hpp  keystore.hpp  models.hpp  server.hpp  services.hpp
cpp/src/: config.cpp  database.cpp  handlers.cpp  hmac.cpp  keystore.cpp  main.cpp  server.cpp  services.cpp
csharp/: .gitignore
csharp/HmacTest/: Program.cs
csharp/SampleGameBackend/: CryptoSignTest.cs  HmacTest.cs  Program.cs  README.md  SampleGameBackend.csproj  TestHmac.cs  appsettings.json
csharp/SampleGameBackend/Controllers/: AssetsController.cs  ExchangeController.cs  ValidationController.cs
csharp/SampleGameBackend/Database/: DatabaseService.cs
csharp/SampleGameBackend/Middleware/: AuthMiddleware.cs  HmacMiddleware.cs
csharp/SampleGameBackend/Models/: Asset.cs  Exchange.cs  Response.cs
csharp/SampleGameBackend/Services/: ExchangeService.cs  HmacService.cs  KeystoreService.cs  ValidationService.cs
golang/: README.md  go.mod  go.sum  main.go
golang/internal/config/: config.go
golang/internal/database/: memdb.go  memdb_test.go
golang/internal/handlers/: assets.go  common.go  exchange.go  hmac.go  routes.go  (+1 more)
golang/test/: hmac_test.go  memdb_test.go  sign_test.go  validate_result_workflow_test.go
typescript/: README.md  jest.config.js  package-lock.json  package.json  test_api.js  test_hmac.js  tsconfig.json
typescript/src/: index.ts
typescript/test/: crypto.sign.test.ts  crypto.sign.viem.test.ts  hmac.test.ts
(+17 files in other folders)
